-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.4.1
-
None
-
-
7a512d126 (dev), 1c8cb94e4 (6.7), 6e434de70 (6.6), c14bbd243 (tqtc/lts-6.5)
It does not seem to be possible to move the VoiceOver's focus to an arbitrary QML Item programmatically. This would be useful to have VoiceOver read some helpful Text (which is not necessarily the first Item in the a11y hierarchy) upon entering a new View.
I'm trying to achieve this by calling forceActiveFocus() on whatever Item seems reasonable. The Item's focus property does change to true but the active element of VoiceOver does not change.
Attached is a MWE which does move the focus of Android's TalkBalk when clicking the button. Is there any other way to achieve this on iOS?
- relates to
-
QTBUG-126622 [iOS] Screen Reader focus gets stuck
-
- Closed
-
For Gerrit Dashboard: QTBUG-114608 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
520216,4 | iOS: Propagate focus changes to VoiceOver | dev | qt/qtbase | Status: MERGED | +2 | 0 |
540619,2 | iOS: Propagate focus changes to VoiceOver | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
540714,2 | iOS: Propagate focus changes to VoiceOver | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
540856,4 | iOS: Propagate focus changes to VoiceOver | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |