src/plugins/platforms/ios/qioswindow.h
@@ -63,6 +63,7 @@ public:
 #endif
 
     bool isForeignWindow() const override;
+    UIView *view() const;
 
 private:
     void applicationStateChanged(Qt::ApplicationState state);
