src/plugins/platforms/ios/qioswindow.mm
@@ -456,6 +456,11 @@ bool QIOSWindow::isForeignWindow() const
     return ![m_view isKindOfClass:QUIView.class];
 }
 
+UIView *QIOSWindow::view() const
+{
+    return m_view;
+}
+
 QT_END_NAMESPACE
 
 #include "moc_qioswindow.cpp"
